<resources>
  <string name="app_name">AlpacaMuscleMaintenance</string>

  <string name="title_activity_main">MainActivity</string>
  <string name="title_home">Home</string>
  <string name="title_exercise">Exercise</string>
  <string name="title_record">Record</string>
  <string name="title_feed">Feed</string>
  <string name="title_bug_report">BugReport</string>
  <string name="action_favorite">favorite</string>
  <string name="action_settings">settings</string>

  <!-- PushUp view -->
  <string name="push_up_initial_text">Go!!</string>

  <!-- Feed view -->
  <string name="qiita_tag_muscle_maintenance">筋トレ</string>

  <!-- Record view -->
  <string name="current_date_format">E dd MMM yyyy</string>
</resources>
