<?xml version="1.0" encoding="utf-8"?>
<navigation
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  app:startDestination="@id/homeFragment">

  <fragment
    android:id="@+id/homeFragment"
    android:name="com.example.alpacamusclemaintenance.presentation.ui.HomeFragment"
    android:label="@string/title_home"
    tools:layout="@layout/fragment_home" />

  <fragment
    android:id="@+id/exerciseFragment"
    android:name="com.example.alpacamusclemaintenance.presentation.ui.ExerciseFragment"
    android:label="@string/title_exercise"
    tools:layout="@layout/fragment_exercise" />

  <fragment
    android:id="@+id/recordFragment"
    android:name="com.example.alpacamusclemaintenance.presentation.ui.RecordFragment"
    android:label="@string/title_record"
    tools:layout="@layout/fragment_record" />

  <fragment
    android:id="@+id/feedFragment"
    android:name="com.example.alpacamusclemaintenance.presentation.ui.FeedFragment"
    android:label="@string/title_feed"
    tools:layout="@layout/fragment_feed">

    <action
      android:id="@+id/action_feedFragment_to_webViewFragment"
      app:destination="@id/webViewFragment" />
  </fragment>

  <fragment
    android:id="@+id/webViewFragment"
    android:name="com.example.alpacamusclemaintenance.presentation.ui.WebViewFragment"
    android:label="WebViewFragment"
    tools:layout="@layout/fragment_web_view">

    <argument android:name="url" />
  </fragment>

  <fragment
    android:id="@+id/bugReportFragment"
    android:name="com.example.alpacamusclemaintenance.presentation.ui.WebViewFragment"
    android:label="WebViewFragment"
    tools:layout="@layout/fragment_web_view">

    <argument
      android:name="url"
      android:defaultValue="https://github.com/alpaca0984/AlpacaMuscleMaintenance" />
  </fragment>
</navigation>
